--- a/hardco-porfolio/public/assets/locales/ch/translation.json
+++ b/hardco-porfolio/public/assets/locales/ch/translation.json
@@ -66,5 +66,11 @@
     "back":"後端",
     "machinelearning":"機器學習",
     "managment":"商管",
-    "crawler":"爬蟲"
+    "crawler":"爬蟲",
+    "testimonial1_desc":"之前跟旻昌組團隊的時候，可以感受他做事情的熱血，非常積極也有很多想法，並且努力付諸行動，充滿感染力的一個人。",
+    "testimonial2_desc":"之前共事過近四個月的短期專案。由於旻昌理性且思緒清晰的特點，在工作上我們的效率很好。此外，他個性外向健談，在私底下相處也非常融洽!合作過程相當愉快且順利!",
+    "testimonial3_desc":"旻昌是一個創造力與行動力具備的人，在合作的過程中，除了不斷提出想法外，也會付諸行動將其實行。個性上樂於聽取他人建議，因此在溝通順暢，整體合作過程愉快！",
+    "testimonial1_title":"中山大學資訊管理學系研究生",
+    "testimonial2_title":"玉山銀行軟體開發 工程師",
+    "testimonial3_title":"RaiseHead Studio PM 實習生"
 }
