--- a/hardco-porfolio/public/assets/locales/en/translation.json
+++ b/hardco-porfolio/public/assets/locales/en/translation.json
@@ -66,5 +66,11 @@
     "back":"Back-end",
     "machinelearning":"Machine-Learning",
     "managment":"Managment",
-    "crawler":"Web Crawler"
+    "crawler":"Web Crawler", 
+    "testimonial1_desc":"When I was teamed up with Kai before, I can feel his passion at constructing a project, he is really ambitious and creative , and he is willing to put his idea into action. He is a respective leader.",
+    "testimonial2_desc":"I had worked with Kai for four months for a project , because his rational and clear mind , Our work is really effiecent , Besides, He is really talkative and hilarious,I have a great experience working with him.",
+    "testimonial3_desc":"Kai is a creative person and His execution is impressive, during our cooperation, He keeps coming up with good idea , and he is willing to turn his thought into action.Kai is also good at taking others advices ,Overall,We have a great work together！",
+    "testimonial1_title":"Sun Yat-sen University graduate student",
+    "testimonial2_title":"E.SUN BANK Sofaware Engineer",
+    "testimonial3_title":"RaiseHead Studio PM Intern"
 }
