Fix testimonials css and content

--- a/hardco-porfolio/public/assets/locales/en/translation.json
+++ b/hardco-porfolio/public/assets/locales/en/translation.json
@@ -67,9 +67,9 @@
     "machinelearning":"Machine-Learning",
     "managment":"Managment",
     "crawler":"Web Crawler", 
-    "testimonial1_desc":"When I was teamed up with Kai before, I can feel his passion at constructing a project, he is really ambitious and creative , and he is willing to put his idea into action. He is a respective leader.",
-    "testimonial2_desc":"I had worked with Kai for four months for a project , because his rational and clear mind , Our work is really effiecent , Besides, He is really talkative and hilarious,I have a great experience working with him.",
-    "testimonial3_desc":"Kai is a creative person and His execution is impressive, during our cooperation, He keeps coming up with good idea , and he is willing to turn his thought into action.Kai is also good at taking others advices ,Overall,We have a great work together！",
+    "testimonial1_desc":"When I teamed up with Kai before, I felt his passion for constructing a project. He is really ambitious and creative, and he is willing to put his ideas into action. He is a respective leader.",
+    "testimonial2_desc":"I worked with Kai for four months on a project, because of his rational and clear-headed mind. Our work was really efficient. Besides, he is really talkative and hilarious,I had a great experience working with him.",
+    "testimonial3_desc":"Kai is a creative person and his execution is impressive. During our cooperation, he keeps coming up with good ideas, and he is willing to turn his thoughts into action. Overall, we have a great time working together!",
     "testimonial1_title":"Sun Yat-sen University graduate student",
     "testimonial2_title":"E.SUN BANK Sofaware Engineer",
     "testimonial3_title":"RaiseHead Studio PM Intern"
