Fix testimonials css and content

--- a/hardco-porfolio/public/assets/locales/ch/translation.json
+++ b/hardco-porfolio/public/assets/locales/ch/translation.json
@@ -72,5 +72,8 @@
     "testimonial3_desc":"旻昌是一個創造力與行動力具備的人，在合作的過程中，除了不斷提出想法外，也會付諸行動將其實行。個性上樂於聽取他人建議，因此在溝通順暢，整體合作過程愉快！",
     "testimonial1_title":"中山大學資訊管理學系研究生",
     "testimonial2_title":"玉山銀行軟體開發 工程師",
-    "testimonial3_title":"RaiseHead Studio PM 實習生"
+    "testimonial3_title":"RaiseHead Studio PM 實習生",
+    "testimonial1_name":"鄭竹秀",
+    "testimonial2_name":"江明軒",
+    "testimonial3_name":"陳妍君"
 }
