Fix translation grammar errors

--- a/hardco-porfolio/public/assets/locales/en/translation.json
+++ b/hardco-porfolio/public/assets/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "switch_language":"Language",
-    "name":"You-Min-Chung",
+    "name":"You, Min-Chung",
     "front-end":"Front-end Engineer",
     "back-end":"Back-end Engineer",
     "content":"Content Creator",
@@ -11,7 +11,7 @@
     "app":"APP",
     "blog":"Blog",
     "microservice":"MicroService",
-    "app-Desc":"Make App that can help improving our quality of life",
+    "app-Desc":"Make apps that can help improve our quality of life.",
     "comment":"Testimonials",
     "work":"Works",
     "aboutme":"About me",
@@ -22,7 +22,7 @@
     "slogan":"Slogan",
     "contact":"Contact",
     "send":"Send",
-    "web-Desc":"Showing all kinds of brand by building awesome websites.",
+    "web-Desc":"Showing all kinds of brands by building awesome websites.",
     "blog-Desc":"Writing all my knowledge into articles.",
     "email":"E-mail",
     "message":"Message",
@@ -32,33 +32,33 @@
     "finaldesign":"Final Design",
     "index":"Back",
     "intro":"Intro",
-    "social-Desc":"A Web App that imitate Messenger,friend reuqest,post system",
+    "social-Desc":"A web application that mimics the Messenger, friend request, and posting systems.",
     "social-feature1":"Post , Comment , Like system",
     "social-feature2":"Realtime Chat Application",
     "social-feature3":"Fully RWD website",
-    "social-story1":"Want to build my own social website just like Facebook",
-    "social-story2":"Use Socket.io to build real time chat application",
-    "social-story3":"Understand Timeline post and friend request's database framework",
-    "social-story4":"Use imgur as picture storage database",
-    "todo-Desc":"A Web App that imitate Microsoft.Todo to create category and build custom todo task",
+    "social-story1":"I Want to build my own social website just like Facebook",
+    "social-story2":"Use Socket.io to build a real-time chat application",
+    "social-story3":"Understand the database framework of Timeline posts and friend requests",
+    "social-story4":"Use imgur as a picture storage database",
+    "todo-Desc":"A Web App that imitates Microsoft Todo to create a category and build a custom todo task",
     "todo-feature1":"Category system to classify tasks",
-    "todo-feature2":"Custom todo tasks system",
+    "todo-feature2":"Customized to-do task management system",
     "todo-feature3":"Switch language",
     "todo-feature4":"Fully RWD Website",
     "todo-story1":"Learn to use Redux to do state managment",
-    "todo-story2":"Not satisfying with previous todolist I have used",
-    "todo-story3":"I really like Microsoft.Todo, so I want to build a clone on my own",
+    "todo-story2":"I am not satisfied with the previous todolist I used",
+    "todo-story3":"I really like Microsoft Todo, so I want to build a clone of my own.",
     "title":"Engineer | Kai You",
-    "desc":"I am Kai You, an Engineer loves surfing！",
-    "point1":"I focus on developing React/Express fullstack application,try to build an application that can give back to society.",
-    "point2":"I develop a app that can help catching illegal parking in campus in 2020.",
-    "point3":"I turn all my knowledge into articles , I have a blog that already have more than 10000 views ",
-    "point4":"I also want to be good at managment , I attended a national contest which help enterprise coming up with marketing strategy.",
-    "point5":"I am a passionate,responsible,hardworking engineer,I believe I can help you solve the problems when it comes to coding",
-    "goal1":"Learning to become a good fullstack engineer,hope to become more effcient at coding",
-    "goal2":"Hope to help more enterprise to show their brand value by building awesome website",
-    "goal3":"After gaining enough experience, I want to develop my own brand to help people who want to become an engineer",
-    "experience1":"Found my brand Hardco,start to write sideprojects and articles",
+    "desc":"I am Kai You, an engineer who loves surfing!",
+    "point1":"I focus on developing React/Express fullstack applications, trying to build an application that can give back to society.",
+    "point2":"I developed an app that can help catch illegal parking on campus in 2020.",
+    "point3":"I turn all my knowledge into articles. I have a blog that already has more than 10000 views.",
+    "point4":"I also want to be good at management. I attended a national contest that helped enterprises come up with marketing strategy.",
+    "point5":"I am a passionate, responsible, and hard-working engineer. I believe I can help you solve problems when it comes to coding.",
+    "goal1":"I am learning to become a good full-stack engineer and hope to become more efficient at coding.",
+    "goal2":"I hope to help more enterprises show their brand value by building awesome websites.",
+    "goal3":"After gaining enough experience, I want to develop my own brand to help people who want to become engineers.",
+    "experience1":"I found my brand, Hardco, and started to write sideprojects and articles.",
     "experience2":"National Sun Yat-sen University Master of Information Management Department",
     "experience3":"Workout App - 2019 NCU Cliab contest -  Honorable Mention ",
     "experience4":"Workout App - 2019 International ICT Innovative Service Award- Honorable Mention",
